@@ -4,10 +4,14 @@ import re
 import unicodedata
 
 from django.apps import apps
+from django.conf import settings
 from django.db.models import Model
 from django.utils.encoding import force_text
 from django.utils.six import string_types
 from django.utils.text import slugify
+
+
+WAGTAIL_APPEND_SLASH = getattr(settings, 'WAGTAIL_APPEND_SLASH', True)
 
 
 def camelcase_to_underscore(str):
